# grpc_example

go/: gen.sh  go.mod  main.go
go/cmd/client/: main.go
go/cmd/server/: main.go
go/src/complex/: complex.pb.go  complex.proto
go/src/enum/: enum.pb.go  enum.proto
go/src/service/: service.pb.go  service.proto
go/src/simple/: simple.pb.go  simple.proto
python/: client.py  complex_demo.py  enum_demo.py  gen.sh  server.py  simple_demo.py
python/complex/: complex_pb2.py
python/enums/: enum_example_pb2.py
python/service/: service_pb2.py  service_pb2_grpc.py
python/simple/: simple_pb2.py
rust/: Cargo.toml  README.md  build.rs
rust/proto/: hello.proto
rust/src/: client.rs  server.rs
